some images and finish init text

--- a/02-timeline.Rmd
+++ b/02-timeline.Rmd
@@ -18,11 +18,17 @@ The world was formed by the Maker and his helpers.
 
 The First sentient race awoke, it is lost to us as to what they called themselves, though the High Elves called them *Thene'we*, meaning "star seekers" in elvish. They were a Reptilian like race with green scaled skin, four arms, thin, lithe, tall bodies, and long tails.  
 
+![](./images/timeline/thenwe.png)
+
 ### 4,227 HEA {-}  
 
 The First Elves Awoke in their forest at night.  
 
+![](./images/timeline/ElvenCity_waterfalls_1.jpg)
+
 As they did, they were awed by the beauty of the Stars and the forest they saw, they named the forest *Inar'uthwe* (the forest of starlight). The Word *Inar'uthwe* soon also became used as the Elvish name for the High elves. They soon founded their capital city of *Elino'thunin*, the city of many waterfalls.  
+
+![](./images/timeline/ElvenCity_waterfalls_2.jpg)
 
 Noxel the god of Nature, seeing the Elves' love of all things green and beautiful in the world which he had helped the Maker create, came to the their young race and offered them a great gift, immortality from age and protection from all sickness. The Elves gladly accepted and helped steward the many forests and fields of the world in return for their handsome gift.  
 
@@ -31,6 +37,8 @@ Noxel the god of Nature, seeing the Elves' love of all things green and beautifu
 The *Thene'we* kept mostly to themselves during all this time.  
 
 However, they did interact with the Elves on a small trading basis, though never taught them their language nor customs, seeing them as a lesser creation. Around this time they started suffering from a great plague, and they started a massive civil war that spanned the whole of the world. In what many scholars think - they, in an attempt to save their race and give themselves the powers equal to that of the gods, performed some kind of profane magic that not only made all their race vanish in a blink of an eye, but tore and ripped apart the very foundations of the world. Many think the “scar” is the epicenter of this cataclysmic event and where their capital city was.  
+
+![](./images/timeline/ruins.jpg)
 
 As no *Thene'we* have been seen since they are considered extinct, many of their ruins still are dotted around the world.  
 
@@ -42,13 +50,21 @@ In the turning of this age, the peoples revered the First.
 
 The first *Natu* awoke in the sea.  
 
+![](./images/timeline/natu_1.jpg)
+
 They made homes out of the many old *Thene'we* cities, whom they call the Ancients, that were now underwater. *Natu* are an aquatic race that can breathe both air and water. It is said they can live to be about 250 years old, though members of the race that never set foot on land tend to live up to 350. There is no proof that air or being on land hurts them, it just simply may be more dangerous for them as they are out of their element that they were not born into.  
 
+![](./images/timeline/natu_2.jpg)
+
 The *Natu* have many legends of the ancients, though they never met them. It is considered culturally "odd" for *Natu* to live away from the water for long periods of time, and they are very rarely seen outside of the western continent. They are a martial and ritualistic culture, in that every action and word has deep meaning (or at least should). I warn any who may cross paths with the *Natu* to consider their words and actions carefully, for meaning may be found where none is.  
+
+![](./images/timeline/natu_3.jpg)
 
 Yton, lord of the seas, is considered the protector of the *Natu*. As such, they worship him along with the Maker.  
 
 Names have very deep meaning to them as they consider your birth name to designate your future. Who you will become, in a very literal sense, can be attributed to your name. Both  your profession and your emotional state of being can even be derived from your name. This, of course, does not make the child be that type of person, it just causes everyone to treat them as though they will and should be that. Though it is appropriate to treat them as such in *Natu* culture, I caution the reader to not underestimate a *Natuan*, for once in a great while will one use their name as a disguise to hide their true intentions.  
+
+![](./images/timeline/natu_4.jpg){width=25%}
 
 Name Examples:  
 
