--- a/02-timeline.Rmd
+++ b/02-timeline.Rmd
@@ -212,7 +212,17 @@ The great dragon hunts were started in the central continent.
 
 All dragons that remain really only live on Anor, and even then perhaps are just rumors. It is said in stories that they may be called back to the main continent via the blowing of a horn. However, there can be little validity offered to this tale, since it can only be found in one scholar's report.  
 
-I plan on conducting research on this area soon, though if no addendum is added to this field guide - well, you can assume an unwanted fate befell me.  
+~~I plan on conducting research on this area soon, though if no addendum is added to this field guide - well, you can assume an unwanted fate befell me.~~  
+
+Research has finally been conducted in this area, through many perils. This is what I have been able to find:  
+
+-   The red dragon flight is pretty simple to find as many of them live in the city of Dragonreach in Anor. There are even special roosting towers for them there. Many of the red flight fights along side Anor and allows a select few to even ride them. So red is somewhat easy to find.  
+-   Blue and white flights you’ll have to travel even farther north into the cold. They are rarely seen.  
+-   Green flight used to be seen all over the central continent though were heavily hunted. I know that there are several left in the wood elf forest and even a couple ancient ones in the high elf forest, and a few more in the fey/noxels realm. Though if any mortal knows beyond some elves, that’s unknown.  
+-   Brass, Bronze, and copper, flights have been reported near the lizard folk islands though unknown if true as sources very and again many were hunted in the central continent.  
+-   Gold has been seen in the vast deserts for Narsha near jade town again unreliable source.  
+-   Silver flight has been reported in the western continent and has a few unreliable sources.  
+-   Black flight reportedly lives is what is known as “the wastes” in the western most part of the western continent.   
 
 ### 22,727 HEA {-}  
 
