--- a/03-races.Rmd
+++ b/03-races.Rmd
@@ -154,3 +154,19 @@ Some scholars have speculated that the vile Unok are the twisted manifestations 
 Ruler: Some kind of moot where prominent shamans make decisions  
 
 Capital: None, each settlement is self ruling   
+
+## Lizzard Folk {-}  
+
+Lizzard folk come in many shapes and sizes there is even one tribe that can spit poison. In fact, some say they are descended from the dragons - and they have come to take this belief into their culture. Lizzard folk will worship Dragons at times, even going so far to think that they are the Maker's main servants.  
+
+![](images/races/lizzard.jpg)
+
+Lizzard folk have been at war with the Cathar for forever (rather, as long as I can find records for).  
+
+![](images/races/lizzard2.jpg)  
+
+Capital: Etzaquoxa  
+
+A minor race, the Frogels, cohabitate the island with the Lizzard folk. They primarily try to trade with the Lizzard folk; however, they are not above ambushing a caravan when greatly advantaged.  
+
+![](images/races/frogels.jpg)  
